--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb+srv://
+MONGO_URL=mongodb+srv://gbasdeveloper:<db_password>@cluster0.6hwai.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 DATABASE_NAME=superheroes
